--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -31,7 +31,7 @@
               <table class="table">
                 <tr>
                   <td><%= image_tag 'default.jpg', size: '40x40' %></td>
-                  <td><label style="background-color: red"><%= I18n.t('views.messages.leader') %></label>：<%= @team.owner.email %></td>
+                  <td><label style="background-color: red"><%= I18n.t('views.messages.leader') %></label>:<%= @team.owner.email %></td>
                 </tr>
               </table>
               <h5><%= I18n.t('views.messages.team_members2') %></h5>
@@ -43,7 +43,9 @@
                       <td><%= assign.user.email %></td>
                       <% if current_user == assign.team.owner || current_user == assign.user %>
                       <td><%= link_to I18n.t('views.button.delete'), team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
-                    <% end %>
+                      <% if @team.owner_id == current_user.id && assign.user.id != @team.owner_id %>
+                        <td><%= link_to I18n.t('views.button.transfer'), assign_owner_team_path(owner_id: assign.user_id), method: :post, class: 'btn btn-sm btn-info' %></td>
+                      <% end %>
                     </tr>
                   <% end %>
                 </tbody>
